feat: Refactor code to follow MVVM pattern and optimize Firebase access with IO coroutines
- Reorganized the code structure to adhere to the MVVM architecture
- Refactored logic for better separation of concerns
- Utilized IO dispatcher for Firebase access in coroutines to improve performance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">teste</string>
+    <string name="app_name">GymHero</string>
     <string name="title_activity_training">TrainingActivity</string>
     <string name="title_activity_home">HomeActivity</string>
     <!-- Strings related to login -->
